Fri Aug  7 11:04:03 1998  Tom Yu  <tlyu@mit.edu>

	* tf_util.c (tf_init): Add call to getuid() to initialize me.

Thu Jul  9 19:35:01 1998  Matthew D Hancher  <mdh@mit.edu>

	* tf_util.c (tf_init): Fixed a potential race condition in the opening 
	of v4 ticket files. tf_init() was calling lstat() followed by fopen().
	Now it calls fopen() and then calls lstat() and fstat() to check file 
	ownership and to check that it opened the file it thought it did. I 
	patched the shared memory code similarly, but since nothing uses it I
	don't have a good way to test it properly.
	
1998-05-08  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* stime.c (krb_stime): 
	* log.c (krb_new_log, krb_log): 
	* klog.c (klog): Print the year using 4 digits to avoid Y2K issues.

Sun Apr  5 19:51:21 1998  Tom Yu  <tlyu@mit.edu>

	* g_cnffile.c (krb__get_srvtabname): Fix up to not free context
	unless it is valid.

Wed Apr  9 23:15:39 1997  Tom Yu  <tlyu@mit.edu>

	* realmofhost.c (krb_realmofhost): Add bounds checking to various
	things.

	* g_krbhst.c (krb_get_krbhst): Fix to bound fscanf and sscanf.

	* g_krbrlm.c (krb_get_lrealm): Fix to bound fscanf.

Mon Nov 18 20:40:39 1996  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Set shared library version to 1.0. [krb5-libs/201]

Thu Nov  7 12:33:06 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* g_in_tkt.c: 
	* sendauth.c: Fixed mangled copyright notice

Thu Jun 13 22:12:57 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to ET_RULES

Wed Jun 12 01:02:45 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Remove unnecessary include config/windows.in.
		wconfig takes care of this automatically.

Wed May 22 07:41:15 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (install-unix): Don't include an install rule, as it
 	is generated by aclocal.m4 for shared libs.

Tue Apr 30 19:26:11 1996  Ken Raeburn  <raeburn@cygnus.com>

	* configure.in: Evaluate AC_C_CROSS before AC_TRY_RUN, to clean up
	the output style.