@@ -19,26 +19,31 @@
 #include <krb.h>
 #include "k5-int.h"
 
+krb5_context krb5__krb4_context = 0;
+
 static FILE*
 krb__v5_get_file(s)
      char *s;
 {
 	FILE *cnffile = 0;
-	krb5_context context;
 	const char* names[3];
 	char **full_name = 0, **cpp;
 	krb5_error_code retval;
 
-	krb5_init_context(&context);
+	if (!krb5__krb4_context)
+		krb5_init_context(&krb5__krb4_context);
 	names[0] = "libdefaults";
 	names[1] = s;
 	names[2] = 0;
-	retval = profile_get_values(context->profile, names, &full_name);
-	if (retval == 0 && full_name && full_name[0]) {
+	if (krb5__krb4_context) {
+	    retval = profile_get_values(krb5__krb4_context->profile, names, 
+					&full_name);
+	    if (retval == 0 && full_name && full_name[0]) {
 		cnffile = fopen(full_name[0],"r");
 		for (cpp = full_name; *cpp; cpp++) 
 			krb5_xfree(*cpp);
 		krb5_xfree(full_name);
+	    }
 	}
 	krb5_free_context(context);
 	return cnffile;
@@ -48,27 +53,27 @@ char *
 krb__get_srvtabname(default_srvtabname)
 	char *default_srvtabname;
 {
-	krb5_context context;
 	const char* names[3];
 	char **full_name = 0, **cpp;
 	krb5_error_code retval;
 	char *retname;
 
-	krb5_init_context(&context);
+	if (!krb5__krb4_context)
+		krb5_init_context(&krb5__krb4_context);
 	names[0] = "libdefaults";
 	names[1] = "krb4_srvtab";
 	names[2] = 0;
-	retval = profile_get_values(context->profile, names, &full_name);
-	if (retval == 0 && full_name && full_name[0]) {
-		retname = strdup(full_name[0]);
-		for (cpp = full_name; *cpp; cpp++) 
-			krb5_xfree(*cpp);
-		krb5_xfree(full_name);
-	} else {
-		retname = strdup(default_srvtabname);
+	if (krb5__krb4_context &&
+	    (retval = profile_get_values(krb5__krb4_context->profile, names, 
+					 &full_name))
+	    && retval == 0 && full_name && full_name[0]) {
+	    retname = strdup(full_name[0]);
+	    for (cpp = full_name; *cpp; cpp++) 
+		krb5_xfree(*cpp);
+	    krb5_xfree(full_name);
+	}else {
+	    retname = strdup(default_srvtabname);
 	}
-	if (context != NULL)
-		krb5_free_context(context);
 	return retname;
 }
 
